--- a/helix-sitemap.yaml
+++ b/helix-sitemap.yaml
@@ -1,4 +1,12 @@
-example:
+version: 1
+
+sitemaps:
+  website:
     origin: https://rockstar.adobeevents.com
-    source: /query-index.json
-    destination: /sitemap.xml
+    lastmod: YYYY-MM-DD
+    languages:
+      default:
+        source: /query-index.json
+        destination: /sitemap-en.xml
+        hreflang: en
+        alternate: /{path}
