--- a/helix-sitemap.yaml
+++ b/helix-sitemap.yaml
@@ -4,9 +4,5 @@ sitemaps:
   website:
     origin: https://helix-main--aem-rockstar-website--adobe.adobeaemcloud.com
     lastmod: YYYY-MM-DD
-    languages:
-      default:
-        source: /query-index.json
-        destination: /sitemap-en.xml
-        hreflang: en
-        alternate: /{path}
+    source: /query-index.json
+    destination: /sitemap.xml
