--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint:js": "eslint .",
     "lint:css": "stylelint blocks/**/*.css styles/*.css",
+    "lint:fix": "eslint . --fix",
     "lint": "npm run lint:js && npm run lint:css",
     "semantic-release": "semantic-release --debug"
   },
