--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,11 @@
 {
-  "extends": [ "stylelint-config-standard" ]
+  "extends": ["stylelint-config-standard"],
+  "overrides": [
+    {
+      "files": ["blocks/live-results/live-results.css"],
+      "rules": {
+        "selector-class-pattern": null
+      }
+    }
+  ]
 }
